correct-file-js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Appena risponderai a tutto questa scritta come per magia sparirà!
     </div>
     
-    <script src="js/.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 <!--fine body-->
