--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div id="js">
-        Appena risponderai a tutto questa scritta come per magia sparirà!
+        <h1>La tua nuova passwoord super segreta è:</h1>
     </div>
     
     <script src="js/script.js"></script>
